# trackella

./: CMakeLists.txt  README.md
cmake/: FindROOT.cmake
legal/: APACHE_2_0.txt
src/: compact.h  doublet_finder.cpp  doublet_finder.h  doublet_finder_device.cpp  epiphany_doublet_finder.cpp  epiphany_doublet_finder.h  epiphany_protocol.h  event.h  eventreader.cpp  eventreader.h  fast_sincos.cpp  fast_sincos.h  find_doublets.cpp  geometry.h  hit.h  hitutils.h  print_event_stats.cpp
